shared/kafka-rest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest
  namespace: shared
  labels:
    app: kafka-rest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-rest
  template:
    metadata:
      labels:
        app: kafka-rest
    spec:
      containers:
      - name: kafka-rest
        image: confluentinc/cp-kafka-rest:7.4.3
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest-svc
  namespace: shared
  labels:
    app: kafka-rest
spec:
  type: ClusterIP
  selector:
    app: kafka-rest
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-proxy-ingress
  namespace: shared
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kafka.proxy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-rest-svc
                port:
                  number: 80
    - host: www.kafka.proxy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-rest-svc
                port:
                  number: 80
